[Network Conditions]: Fixing vertical spacing bug caused by error text
Issue:
- window scrolls up/down though 'User agent' text field is not empty and no error message is being shown

Changes:
- Error text isn't re-set to an empty string, but is hidden/revealed as needed

GIFs:
Broken: https://imgur.com/ocufEEF
Fixed: https://imgur.com/LmTAYqY

Bug: 1159319

--- a/front_end/network/networkConfigView.css
+++ b/front_end/network/networkConfigView.css
@@ -45,6 +45,10 @@
   margin: 5px 0;
 }
 
+.network-config-input-validation-error.hide-error-text {
+  display: none;
+}
+
 /* Network throttling */
 
 .network-config-throttling .chrome-select {
